--- a/src/styles/components/_points-list.scss
+++ b/src/styles/components/_points-list.scss
@@ -23,6 +23,7 @@
 
 	&__item {
 		display: flex;
+		content-visibility: auto;
 	}
 
 	&__more {
